--- a/source/index.html
+++ b/source/index.html
@@ -4,126 +4,279 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Resto</title>
+    <title>mstore</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">Resto..</a>
-      <ul class="page-header__list">
-        <li class="page-header__item">Our Story</li>
-        <li class="page-header__item">Menu</li>
-        <li class="page-header__item">Reservations</li>
-        <li class="page-header__item">News</li>
-        <li class="page-header__item">Rviews</li>
-      </ul>
+      <div class="page-header__up">
+        <div class="page-header__left">
+          <p class="page-header__phone">(+84).898.058.000</p>
+          <p class="page-header__email">min101092@gmail.com</p>
+        </div>
+        <div class="page-header__right">
+          <p class="page-header__language">Language: Eng</p>
+          <p class="page-header__currency">Currency: Usd</p>
+        </div>
+      </div>
+      <div class="page-header__down">
+        <a class="page-header__logo">Mstore</a>
+        <ul class="page-header__menu">
+          <li class="page-header__item"><a href="#">Home</a></li>
+          <li class="page-header__item"><a href="#">Men</a></li>
+          <li class="page-header__item"><a href="#">Women</a></li>
+          <li class="page-header__item"><a href="#">Accessories</a></li>
+          <li class="page-header__item"><a href="#">Lookbook</a></li>
+          <li class="page-header__item"><a href="#">Contact</a></li>
+        </ul>
+        <ul class="page-header__profil">
+          <li class="page-header__item"></li>
+          <li class="page-header__item"></li>
+          <li class="page-header__item"></li>
+          <li class="page-header__item"></li>
+        </ul>
+      </div>
     </header>
 
     <main class="page-main">
-      <div class="page-main__header">
+      <section class="page-main__header">
         <div class="container">
-          <h1 class="page-main__title">This Template is Awesome</h1>
-          <p class="page-main__slogan">resto restaurant home page website template</p>
+          <p class="page-main__intro">We make it easy to exprience creativity</p>
+          <h1 class="page-main__title">Stylish new design</h1>
+          <p class="page-main__slogan">Order online and have your products delivered to your closest store for free...</p>
+          <p class="page-main__shopping">Shopping now</p>
         </div>
-      </div>
-      <div class="page-main__menu container">
-        <ul class="page-main__list">
-          <li class="page-main__item">
-            <h2 class="page-main__name">Voluplate cillum fugiat</h2>
-            <p class="page-main__description">Cheese, tomato, mushrooms, onions</p>
-            <p class="page-main__price">50$</p>
-          </li>
-          <li class="page-main__item">
-            <h2 class="page-main__name">Metus varius laureet</h2>
-            <p class="page-main__description">Chicken, mozzarella cheese, onions</p>
-            <p class="page-main__price">62$</p>
-          </li>
-          <li class="page-main__item">
-            <h2 class="page-main__name">Donec sodales magna</h2>
-            <p class="page-main__description">Tuna, Sweetcorn, cheese</p>
-            <p class="page-main__price">25$</p>
-          </li>
-          <li class="page-main__item">
-            <h2 class="page-main__name">Saugue velit cursus</h2>
-            <p class="page-main__description">Pineapple, Minced Beef, Cheese</p>
-            <p class="page-main__price">30$</p>
-          </li>
-          <li class="page-main__item">
-            <h2 class="page-main__name">Voluplate cillum fugiat</h2>
-            <p class="page-main__description">Cheese, tomato, mushrooms, onions</p>
-            <p class="page-main__price">45$</p>
-          </li>
-          <li class="page-main__item">
-            <h2 class="page-main__name">Voluplate cillum fugiat</h2>
-            <p class="page-main__description">Cheese, tomato, mushrooms, onions</p>
-            <p class="page-main__price">32$</p>
-          </li>
-          <li class="page-main__item">
-            <h2 class="page-main__name">Voluplate cillum fugiat</h2>
-            <p class="page-main__description">Cheese, tomato, mushrooms, onions</p>
-            <p class="page-main__price">15$</p>
-          </li>
-          <li class="page-main__item">
-            <h2 class="page-main__name">Voluplate cillum fugiat</h2>
-            <p class="page-main__description">Cheese, tomato, mushrooms, onions</p>
-            <p class="page-main__price">35$</p>
-          </li>
-        </ul>
-        <button class="btn__load">load more</button>
-      </div>
-      <div class="page-main__features slider container">
-        <div class="page-main__block">
-          <h2 class="page-main__dishes">Featured dishes</h2>
-          <div class="page-main__toggles slider__toggles">
-            <button class="slider__toggle" type="button"></button>
-            <button class="slider__toggle" type="button"></button>
-            <button class="slider__toggle" type="button"></button>
-            <button class="slider__toggle" type="button"></button>
+      </section>
+      <section class="service">
+        <div class="container">
+          <ul class="service__list">
+            <li class="service__item">
+              <h2 class="service__name">Free shipping</h2>
+              <p class="service__description">Free shipping for all US order</p>
+            </li>
+            <li class="service__item">
+              <h2 class="service__name">Support 24/7</h2>
+              <p class="service__description">We support 24 hours a day</p>
+            </li>
+            <li class="service__item">
+              <h2 class="service__name">30 day return</h2>
+              <p class="service__description">You have 30 days to return</p>
+            </li>
+            <li class="service__item">
+              <h2 class="service__name">Payment 100% secured</h2>
+              <p class="service__description">Payment 100% secured</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="arrival">
+        <div class="container">
+            <div class="arrival__left">
+            <p class="arrival__intro-boy">New arrivals</p>
+            <h2 class="arrival__boy">Shirt for boy's</h2>
+            <p class="arrival__price-boy">$99.00</p>
+            <p class="arrival__description">Refresh your wardrobe with a piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers. Whether you're searching for a special occasion...</p>
+            <p class="arrival__shopping">Shopping now</p>
+          </div>
+          <div class="arrival__right">
+            <p class="arrival__intro-girl">New arrivals</p>
+            <h2 class="arrival__girl">Shirt for girl's</h2>
+            <p class="arrival__price-girl">$99.00</p>
+            <p class="arrival__description">Refresh your wardrobe with a piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers. Whether you're searching for a special occasion...</p>
+            <p class="arrival__shopping">Shopping now</p>
           </div>
         </div>
-        <ul class="page-main__dishes-list">
-          <li class="page-main__dishes-item">
-            <img src="img/food1.jpg" width="230" height="200" alt="meat">
-            <div class="page-main__block">
-              <h3 class="page-main__food">Figuat nulla sint</h3>
-              <p class="page-main__total">$30</p>
+      </section>
+      <section class="collection">
+        <div class="container">
+          <p class="collection__intro">New item's</p>
+          <h2 class="collection__title">Shoes collection</h2>
+          <p class="collection__description">We are delighted to reveal our campaign for the Autumn/Winter 2017 collection, styled by fashion icon Carolin Issa and shot by esteemed photographer www.minsoi.com...</p>
+          <p class="collection__shopping">Shopping now</p>
+        </div>
+      </section>
+      <section class="product"> 
+        <div class="container">
+          <div class="product__header">
+            <h2 class="product__title">Feauture Product</h2>
+            <p class="product__all">All product</p>
+          </div>
+          <ul class="product__list">
+            <li class="product__item">
+              <img src="img/food1.jpg" width="270" height="350" alt="abominable">
+              <div class="product__block">
+                <h3 class="product__name">Abominable Hoodie</h3>
+                <p class="product__total">$40.00</p>
+              </div>
+            </li>
+            <li class="product__item">
+              <img src="img/food2.jpg" width="270" height="350" alt="hollister">
+              <div class="product__block">
+                <h3 class="product__name">Hollister Backyard Sweatshirt</h3>
+                <p class="product__total">$29.00</p>
+              </div>
+            </li>
+            <li class="product__item">
+              <img src="img/food3.jpg" width="270" height="350" alt="oslo">
+              <div class="product__block">
+                <h3 class="product__name">Oslo Trek Hoodie</h3>
+                <p class="product__total">$29.00</p>
+              </div>
+            </li>
+            <li class="product__item">
+              <img src="img/food4.jpg" width="270" height="350" alt="mach">
+              <div class="product__block">
+                <h3 class="product__name">Mach Street Sweatshirt</h3>
+                <p class="product__total">$40.00</p>
+              </div>
+            </li>
+            <li class="product__item">
+              <img src="img/food1.jpg" width="270" height="350" alt="backyard">
+              <div class="product__block">
+                <h3 class="product__name">Backyard Sweat Shirt</h3>
+                <p class="product__total">$40.00</p>
+              </div>
+            </li>
+            <li class="product__item">
+              <img src="img/food2.jpg" width="270" height="350" alt="faded">
+              <div class="product__block">
+                <h3 class="product__name">Faded Short Sleeves</h3>
+                <p class="product__total">$110.00</p>
+              </div>
+            </li>
+            <li class="product__item">
+              <img src="img/food3.jpg" width="270" height="350" alt="hoodie">
+              <div class="product__block">
+                <h3 class="product__name">Oslo Trek Hoodie</h3>
+                <p class="product__total">$80.00</p>
+              </div>
+            </li>
+            <li class="product__item">
+              <img src="img/food4.jpg" width="270" height="350" alt="leather">
+              <div class="product__block">
+                <h3 class="product__name">Leather Sneakers</h3>
+                <p class="product__total">$80.00</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="sport">
+        <div class="container">
+          <p class="sport__intro">Sport shoes collection</p>
+          <p class="sport__slogan">Entire shoes purchase</p>
+          <h3 class="sport__title">Save up to $70</h3>
+          <p class="sport__desc">Click here see all the shoes collection...</p>
+        </div>
+      </section>
+      <section class="discover">
+        <div class="container">
+          <div class="discover__wrapper">
+            <div class="discover__block">
+              <h3 class="discover__title">We love mstore.</h3>
+              <p class="discover__desc">A professional-looking tote for your everyday needs! This Wil-sons Leather tote has a canvas look with genuine leather trim and a structured silhouette. Its shiny gold-tone hardware and two-tone design give it extra fashionable flair.</p>
+              <a class="discover__link">Discover</a>
             </div>
-          </li>
-          <li class="page-main__dishes-item">
-            <img src="img/food2.jpg" width="230" height="200" alt="salad">
-            <div class="page-main__block">
-              <h3 class="page-main__food">Figuat nulla sint</h3>
-              <p class="page-main__total">$30</p>
-            </div>
-          </li>
-          <li class="page-main__dishes-item">
-            <img src="img/food3.jpg" width="230" height="200" alt="porridge">
-            <div class="page-main__block">
-              <h3 class="page-main__food">Figuat nulla sint</h3>
-              <p class="page-main__total">$30</p>
-            </div>
-          </li>
-          <li class="page-main__dishes-item">
-            <img src="img/food4.jpg" width="230" height="200" alt="millet">
-            <div class="page-main__block">
-              <h3 class="page-main__food">Figuat nulla sint</h3>
-              <p class="page-main__total">$30</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="passage container">
-        <h2 class="passage__title">The Gallery</h2>
-        <div class="passage__image">
-          <img src="img/gallery1.jpg" width="366" height="432" alt="roll">
-          <div class="passage__gallery">
-            <img src="img/gallery2.jpg" width="367" height="216" alt="bagel">
-            <img src="img/gallery3.jpg" width="367" height="216" alt="pizza">
-            <img src="img/gallery4.jpg" width="367" height="216" alt="berries">
-            <img src="img/gallery5.jpg" width="367" height="216" alt="pasta">
+            <img src="img/gallery1.jpg" width="585" height="400" alt="roll">
           </div>
         </div>
-      </div>
+      </section>
+      <section class="best">
+        <div class="container">
+          <div class="best__header">
+            <h2 class="best__title">Best Sellers Product</h2>
+            <p class="best__all">All product</p>
+          </div>
+          <ul class="best__list">
+            <li class="best__item">
+              <img src="img/food1.jpg" width="270" height="350" alt="abominable">
+              <div class="best__block">
+                <h3 class="best__name">Abominable Hoodie</h3>
+                <p class="best__total">$40.00</p>
+              </div>
+            </li>
+            <li class="best__item">
+              <img src="img/food2.jpg" width="270" height="350" alt="hollister">
+              <div class="best__block">
+                <h3 class="best__name">Hollister Backyard Sweatshirt</h3>
+                <p class="best__total">$29.00</p>
+              </div>
+            </li>
+            <li class="best__item">
+              <img src="img/food3.jpg" width="270" height="350" alt="oslo">
+              <div class="best__block">
+                <h3 class="best__name">Oslo Trek Hoodie</h3>
+                <p class="best__total">$29.00</p>
+              </div>
+            </li>
+            <li class="best__item">
+              <img src="img/food4.jpg" width="270" height="505" alt="leather">
+              <div class="best__block">
+                <h3 class="best__name">Leather Sneakers</h3>
+                <p class="best__total">$80.00</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="blog">
+        <div class="container">
+          <h3 class="blog__title">Blog Post's</h3>
+          <ul class="blog__list">
+            <li class="blog__item">
+              <img src="img/food4.jpg" width="370" height="225" alt="leather">
+              <h4 class="blog__intro">Lorem Ipsum Dolor Sitamet</h4>
+              <div class="blog__date">
+                <p class="blog__number">Feb - 23</p>
+                <p class="blog__comment">2 comment</p>
+              </div>
+              <p class="blog__desc"></p>
+              <a class="blog__read">Read more</a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__left">
+            <a class="footer__logo">Mstore</a>
+            <p class="footer__desc">Lorem Ipsum is simply dummy text of the print-ing and tepysetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <ul class="footer__list">
+              <li class="footer__item">Adress: <span class="footer__name">Hanoy, Vietnamese.</span></li>
+              <li class="footer__item">Phone: <span class="footer__name">(+84).898.058.000</span></li>
+              <li class="footer__item">Mail: <span class="footer__name">min101092@gmail.com</span></li>
+            </ul>
+            <ul class="footer__social">
+              <li class="footer__social-item"><a href="#"></a></li>
+              <li class="footer__social-item"><a href="#"></a></li>
+              <li class="footer__social-item"><a href="#"></a></li>
+              <li class="footer__social-item"><a href="#"></a></li>
+              <li class="footer__social-item"><a href="#"></a></li>
+              <li class="footer__social-item"><a href="#"></a></li>
+            </ul>
+          </div>
+          <div class="footer__informations">
+            <h3 class="footer__title">Informations</h3>
+            <ul class="footer__info">
+              <li class="footer__info-item"><a href="#">Privacy</a></li>
+              <li class="footer__info-item"><a href="#">Odering info</a></li>
+              <li class="footer__info-item"><a href="#">Terms of Use</a></li>
+              <li class="footer__info-item"><a href="#">Contacts</a></li>
+              <li class="footer__info-item"><a href="#">Copyright</a></li>
+              <li class="footer__info-item"><a href="#">Return info</a></li>
+              <li class="footer__info-item"><a href="#">Find Your Country</a></li>
+              <li class="footer__info-item"><a href="#">Warranty</a></li>
+              <li class="footer__info-item"><a href="#">Site map</a></li>
+              <li class="footer__info-item"><a href="#">Product Manual</a></li>
+            </ul>
+            <div class="footer__map">
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
   </html>
