--- a/source/index.html
+++ b/source/index.html
@@ -39,30 +39,32 @@
     </header>
 
     <main class="page-main">
-      <section class="page-main__header">
+      <section class="design">
         <div class="container">
-          <p class="page-main__intro">We make it easy to exprience creativity</p>
-          <h1 class="page-main__title">Stylish new design</h1>
-          <p class="page-main__slogan">Order online and have your products delivered to your closest store for free...</p>
-          <p class="page-main__shopping">Shopping now</p>
+          <div class="design__wrapper">
+            <p class="design__intro">We make it easy to exprience creativity</p>
+            <h1 class="design__title">Stylish new design</h1>
+            <p class="design__slogan">Order online and have your products delivered to your closest store for free...</p>
+            <p class="design__shopping">Shopping now</p>
+          </div>
         </div>
       </section>
       <section class="service">
         <div class="container">
           <ul class="service__list">
-            <li class="service__item">
+            <li class="service__item service__item--auto">
               <h2 class="service__name">Free shipping</h2>
               <p class="service__description">Free shipping for all US order</p>
             </li>
-            <li class="service__item">
+            <li class="service__item service__item--support">
               <h2 class="service__name">Support 24/7</h2>
               <p class="service__description">We support 24 hours a day</p>
             </li>
-            <li class="service__item">
+            <li class="service__item service__item--return">
               <h2 class="service__name">30 day return</h2>
               <p class="service__description">You have 30 days to return</p>
             </li>
-            <li class="service__item">
+            <li class="service__item service__item--payment">
               <h2 class="service__name">Payment 100% secured</h2>
               <p class="service__description">Payment 100% secured</p>
             </li>
@@ -71,28 +73,32 @@
       </section>
       <section class="arrival">
         <div class="container">
+          <div class="arrival__wrapper">
             <div class="arrival__left">
-            <p class="arrival__intro-boy">New arrivals</p>
-            <h2 class="arrival__boy">Shirt for boy's</h2>
-            <p class="arrival__price-boy">$99.00</p>
-            <p class="arrival__description">Refresh your wardrobe with a piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers. Whether you're searching for a special occasion...</p>
-            <p class="arrival__shopping">Shopping now</p>
-          </div>
-          <div class="arrival__right">
-            <p class="arrival__intro-girl">New arrivals</p>
-            <h2 class="arrival__girl">Shirt for girl's</h2>
-            <p class="arrival__price-girl">$99.00</p>
-            <p class="arrival__description">Refresh your wardrobe with a piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers. Whether you're searching for a special occasion...</p>
-            <p class="arrival__shopping">Shopping now</p>
+              <p class="arrival__intro-boy">New arrivals</p>
+              <h2 class="arrival__boy">Shirt for boy's</h2>
+              <p class="arrival__price-boy">$99.00</p>
+              <p class="arrival__description-boy">Refresh your wardrobe with a piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers. Whether you're searching for a special occasion...</p>
+              <p class="arrival__shopping">Shopping now</p>
+            </div>
+            <div class="arrival__right">
+              <p class="arrival__intro-girl">New arrivals</p>
+              <h2 class="arrival__girl">Shirt for girl's</h2>
+              <p class="arrival__price-girl">$99.00</p>
+              <p class="arrival__description-girl">Refresh your wardrobe with a piece from our gorgeous ready-to-wear collection, featuring beautifully crafted coats, dresses, jackets, sweaters, skirts, tops and trousers. Whether you're searching for a special occasion...</p>
+              <p class="arrival__shopping">Shopping now</p>
+            </div>
           </div>
         </div>
       </section>
       <section class="collection">
         <div class="container">
-          <p class="collection__intro">New item's</p>
-          <h2 class="collection__title">Shoes collection</h2>
-          <p class="collection__description">We are delighted to reveal our campaign for the Autumn/Winter 2017 collection, styled by fashion icon Carolin Issa and shot by esteemed photographer www.minsoi.com...</p>
-          <p class="collection__shopping">Shopping now</p>
+          <div class="collection__wrapper">
+            <p class="collection__intro">New item's</p>
+            <h2 class="collection__title">Shoes collection</h2>
+            <p class="collection__description">We are delighted to reveal our campaign for the Autumn/Winter 2017 collection, styled by fashion icon Carolin Issa and shot by esteemed photographer www.minsoi.com...</p>
+            <p class="collection__shopping">Shopping now</p>
+          </div>
         </div>
       </section>
       <section class="product"> 
@@ -103,56 +109,56 @@
           </div>
           <ul class="product__list">
             <li class="product__item">
-              <img src="img/food1.jpg" width="270" height="350" alt="abominable">
+              <img src="img/P_1.jpg" width="270" height="350" alt="abominable">
               <div class="product__block">
                 <h3 class="product__name">Abominable Hoodie</h3>
                 <p class="product__total">$40.00</p>
               </div>
             </li>
-            <li class="product__item">
-              <img src="img/food2.jpg" width="270" height="350" alt="hollister">
+            <li class="product__item product__item--hot">
+              <img src="img/P_2.jpg" width="270" height="350" alt="hollister">
               <div class="product__block">
                 <h3 class="product__name">Hollister Backyard Sweatshirt</h3>
                 <p class="product__total">$29.00</p>
               </div>
             </li>
             <li class="product__item">
-              <img src="img/food3.jpg" width="270" height="350" alt="oslo">
+              <img src="img/P_3.jpg" width="270" height="350" alt="oslo">
               <div class="product__block">
                 <h3 class="product__name">Oslo Trek Hoodie</h3>
                 <p class="product__total">$29.00</p>
               </div>
             </li>
-            <li class="product__item">
-              <img src="img/food4.jpg" width="270" height="350" alt="mach">
+            <li class="product__item product__item--new">
+              <img src="img/P_4.jpg" width="270" height="350" alt="mach">
               <div class="product__block">
                 <h3 class="product__name">Mach Street Sweatshirt</h3>
                 <p class="product__total">$40.00</p>
               </div>
             </li>
-            <li class="product__item">
-              <img src="img/food1.jpg" width="270" height="350" alt="backyard">
+            <li class="product__item product__item--sale">
+              <img src="img/P_5.jpg" width="270" height="350" alt="backyard">
               <div class="product__block">
                 <h3 class="product__name">Backyard Sweat Shirt</h3>
                 <p class="product__total">$40.00</p>
               </div>
             </li>
             <li class="product__item">
-              <img src="img/food2.jpg" width="270" height="350" alt="faded">
+              <img src="img/P_6.jpg" width="270" height="350" alt="faded">
               <div class="product__block">
                 <h3 class="product__name">Faded Short Sleeves</h3>
                 <p class="product__total">$110.00</p>
               </div>
             </li>
             <li class="product__item">
-              <img src="img/food3.jpg" width="270" height="350" alt="hoodie">
+              <img src="img/P_7.jpg" width="270" height="350" alt="hoodie">
               <div class="product__block">
                 <h3 class="product__name">Oslo Trek Hoodie</h3>
                 <p class="product__total">$80.00</p>
               </div>
             </li>
             <li class="product__item">
-              <img src="img/food4.jpg" width="270" height="350" alt="leather">
+              <img src="img/P_8.jpg" width="270" height="350" alt="leather">
               <div class="product__block">
                 <h3 class="product__name">Leather Sneakers</h3>
                 <p class="product__total">$80.00</p>
@@ -163,10 +169,12 @@
       </section>
       <section class="sport">
         <div class="container">
-          <p class="sport__intro">Sport shoes collection</p>
-          <p class="sport__slogan">Entire shoes purchase</p>
-          <h3 class="sport__title">Save up to $70</h3>
-          <p class="sport__desc">Click here see all the shoes collection...</p>
+          <div class="sport__wrapper">
+            <p class="sport__intro">Sport shoes collection</p>
+            <p class="sport__slogan">Entire shoes purchase</p>
+            <h3 class="sport__title">Save up to $70</h3>
+            <p class="sport__desc">Click here see all the shoes collection...</p>
+          </div>
         </div>
       </section>
       <section class="discover">
@@ -177,7 +185,7 @@
               <p class="discover__desc">A professional-looking tote for your everyday needs! This Wil-sons Leather tote has a canvas look with genuine leather trim and a structured silhouette. Its shiny gold-tone hardware and two-tone design give it extra fashionable flair.</p>
               <a class="discover__link">Discover</a>
             </div>
-            <img src="img/gallery1.jpg" width="585" height="400" alt="roll">
+            <img src="img/Bg2.jpg" width="585" height="400" alt="roll">
           </div>
         </div>
       </section>
@@ -189,28 +197,28 @@
           </div>
           <ul class="best__list">
             <li class="best__item">
-              <img src="img/food1.jpg" width="270" height="350" alt="abominable">
+              <img src="img/P_8.jpg" width="270" height="350" alt="abominable">
               <div class="best__block">
                 <h3 class="best__name">Abominable Hoodie</h3>
                 <p class="best__total">$40.00</p>
               </div>
             </li>
             <li class="best__item">
-              <img src="img/food2.jpg" width="270" height="350" alt="hollister">
+              <img src="img/P_2.jpg" width="270" height="350" alt="hollister">
               <div class="best__block">
                 <h3 class="best__name">Hollister Backyard Sweatshirt</h3>
                 <p class="best__total">$29.00</p>
               </div>
             </li>
             <li class="best__item">
-              <img src="img/food3.jpg" width="270" height="350" alt="oslo">
+              <img src="img/P_3.jpg" width="270" height="350" alt="oslo">
               <div class="best__block">
                 <h3 class="best__name">Oslo Trek Hoodie</h3>
                 <p class="best__total">$29.00</p>
               </div>
             </li>
             <li class="best__item">
-              <img src="img/food4.jpg" width="270" height="505" alt="leather">
+              <img src="img/Bg_Adv.jpg" width="270" height="505" alt="leather">
               <div class="best__block">
                 <h3 class="best__name">Leather Sneakers</h3>
                 <p class="best__total">$80.00</p>
@@ -221,19 +229,58 @@
       </section>
       <section class="blog">
         <div class="container">
-          <h3 class="blog__title">Blog Post's</h3>
+          <div class="blog__header">
+            <h3 class="blog__title">Blog Post's</h3>
+          </div>
           <ul class="blog__list">
             <li class="blog__item">
-              <img src="img/food4.jpg" width="370" height="225" alt="leather">
+              <img src="img/Post1.jpg" width="370" height="225" alt="leather">
               <h4 class="blog__intro">Lorem Ipsum Dolor Sitamet</h4>
               <div class="blog__date">
                 <p class="blog__number">Feb - 23</p>
                 <p class="blog__comment">2 comment</p>
               </div>
-              <p class="blog__desc"></p>
+              <p class="blog__desc">Lorem Ipsum is simply dummy text of the printing and tepysetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,...</p>
+              <a class="blog__read">Read more</a>
+            </li>
+            <li class="blog__item">
+              <img src="img/Post2.jpg" width="370" height="225" alt="leather">
+              <h4 class="blog__intro">Lorem Ipsum Dolor Sitamet</h4>
+              <div class="blog__date">
+                <p class="blog__number">Feb - 23</p>
+                <p class="blog__comment">0 comment</p>
+              </div>
+              <p class="blog__desc">Lorem Ipsum is simply dummy text of the printing and tepysetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,...</p>
+              <a class="blog__read">Read more</a>
+            </li>
+            <li class="blog__item">
+              <img src="img/Post3.jpg" width="370" height="225" alt="leather">
+              <h4 class="blog__intro">Lorem Ipsum Dolor Sitamet</h4>
+              <div class="blog__date">
+                <p class="blog__number">Feb - 23</p>
+                <p class="blog__comment">2 comment</p>
+              </div>
+              <p class="blog__desc">Lorem Ipsum is simply dummy text of the printing and tepysetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,...</p>
               <a class="blog__read">Read more</a>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="form">
+        <div class="container">
+          <div class="form__wrapper">
+            <div class="form__left">
+              <h4 class="form__title">Join our email</h4>
+              <p class="form__desc">We only send emails once a mount and only about good things.</p>
+            </div>
+            <form class="form__submit">
+              <fieldset class="form__contact">
+                <legend><span class="visually-hidden">Связаться</span></legend>
+                <input type="text" class="form__input" placeholder="Your email...">
+                <button type="submit" class="form__btn">Submit</button>
+              </fieldset>
+            </form>
+          </div>
         </div>
       </section>
     </main>
