--- a/source/index.html
+++ b/source/index.html
@@ -10,31 +10,39 @@
   <body>
     <header class="page-header">
       <div class="page-header__up">
-        <div class="page-header__left">
-          <p class="page-header__phone">(+84).898.058.000</p>
-          <p class="page-header__email">min101092@gmail.com</p>
-        </div>
-        <div class="page-header__right">
-          <p class="page-header__language">Language: Eng</p>
-          <p class="page-header__currency">Currency: Usd</p>
+        <div class="container">
+          <div class="page-header__wrapper-up">
+            <div class="page-header__left">
+              <p class="page-header__phone">(+84).898.058.000</p>
+              <p class="page-header__email">min101092@gmail.com</p>
+            </div>
+            <div class="page-header__right">
+              <p class="page-header__language">Language: Eng</p>
+              <p class="page-header__currency">Currency: Usd</p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="page-header__down">
-        <a class="page-header__logo">Mstore</a>
-        <ul class="page-header__menu">
-          <li class="page-header__item"><a href="#">Home</a></li>
-          <li class="page-header__item"><a href="#">Men</a></li>
-          <li class="page-header__item"><a href="#">Women</a></li>
-          <li class="page-header__item"><a href="#">Accessories</a></li>
-          <li class="page-header__item"><a href="#">Lookbook</a></li>
-          <li class="page-header__item"><a href="#">Contact</a></li>
-        </ul>
-        <ul class="page-header__profil">
-          <li class="page-header__item"></li>
-          <li class="page-header__item"></li>
-          <li class="page-header__item"></li>
-          <li class="page-header__item"></li>
-        </ul>
+        <div class="container">
+          <div class="page-header__wrapper-down">
+            <a class="page-header__logo" href="#"></a>
+            <ul class="page-header__menu">
+              <li class="page-header__item"><a class="page-header__link" href="#">Home</a></li>
+              <li class="page-header__item"><a class="page-header__link" href="#">Men</a></li>
+              <li class="page-header__item"><a class="page-header__link" href="#">Women</a></li>
+              <li class="page-header__item"><a class="page-header__link" href="#">Accessories</a></li>
+              <li class="page-header__item"><a class="page-header__link" href="#">Lookbook</a></li>
+              <li class="page-header__item"><a class="page-header__link" href="#">Contact</a></li>
+            </ul>
+            <ul class="page-header__profil">
+              <li class="page-header__item"><a class="page-header__search" href="#"></a></li>
+              <li class="page-header__item"><a class="page-header__user" href="#"></a></li>
+              <li class="page-header__item"><a class="page-header__wishlist" href="#"></a></li>
+              <li class="page-header__item page-header__item--last"><a class="page-header__cart" href="#"></a>$0.00</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
 
