done sale, new, hot

--- a/source/index.html
+++ b/source/index.html
@@ -165,7 +165,7 @@
                 <p class="product__total">$40.00</p>
               </div>
             </li>
-            <li class="product__item product__item--hot">
+            <li class="product__item">
               <img src="img/P_2.jpg" width="270" height="350" alt="hollister" />
               <div class="product__block">
                 <h3 class="product__name">Hollister Backyard Sweatshirt</h3>
@@ -179,14 +179,14 @@
                 <p class="product__total">$29.00</p>
               </div>
             </li>
-            <li class="product__item product__item--new">
+            <li class="product__item">
               <img src="img/P_4.jpg" width="270" height="350" alt="mach" />
               <div class="product__block">
                 <h3 class="product__name">Mach Street Sweatshirt</h3>
                 <p class="product__total">$40.00</p>
               </div>
             </li>
-            <li class="product__item product__item--sale">
+            <li class="product__item">
               <img src="img/P_5.jpg" width="270" height="350" alt="backyard" />
               <div class="product__block">
                 <h3 class="product__name">Backyard Sweat Shirt</h3>
@@ -360,7 +360,8 @@
                 <input
                   type="text"
                   class="form__input"
-                  placeholder="Your email..."
+                  placeholder="name@mail.com"
+                  required
                 />
                 <button type="submit" class="form__btn">Submit</button>
               </fieldset>
@@ -422,6 +423,8 @@
       </div>
     </footer>
 
+    <script src="js/product.js"></script>
+    <script src="js/form.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
