--- a/source/index.html
+++ b/source/index.html
@@ -424,6 +424,7 @@
     </footer>
 
     <script src="js/product.js"></script>
+    <script src="js/best.js"></script>
     <script src="js/form.js"></script>
     <script src="js/app.js"></script>
   </body>
